# papertext_docs

./: .gitlab-ci.yml  .gitmodules  README.md  pyproject.toml
src/papertext_docs/: __init__.py  __main__.py  abc.py  analyzers.py  docs.py  tasks.py  types.py
tests/: test_papertext_docs.py
