[tool.poetry]
name = "papertext_docs"
version = "0.1.0"
description = "standart implementation of docs module for papertext"
authors = ["Danil Kireev <kireev@isa.ru>"]

[tool.poetry.scripts]
lint = "papertext_docs.__main__:lint"
fix = "papertext_docs.__main__:fix"

[tool.poetry.plugins."paperback.modules"]
docs = "papertext_docs:DocsImplemented"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pyexling = { git = "git@github.com:PaperText/pyexling.git" }
pytest = "^6.0"
flake8 = "^3.7"
flakehell = "^0.5.0"
flake8-fixme = "^1.1"
pep8-naming = "^0.11.1"
black = "19.10b0"
isort = "^5.3"
mypy = "^0.782"
rope = "^0.17.0"

[tool.flakehell]
exclude = ["__pycahce__"]
format = "grouped"
show_source = true
max_line_length = 79

[tool.flakehell.plugins]
"flake8-fixme" = ["+*"]
"pep8-naming" = ["+*"]
"mccabe" = ["+*"]
"pycodestyle" = ["+*"]
"pyflakes" = ["+*"]
"pylint" = ["+*"]

[tool.black]
target-version = ['py38']
line_length = 79

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
balanced_wrapping = true
length_sort = true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
