[tool.poetry]
name = "papertext_docs"
version = "0.1.0"
description = "standart implementation of docs module for papertext"
authors = ["Danil Kireev <kireev@isa.ru>"]
license = "MIT"
readme="README.md"

[tool.poetry.scripts]
fix = "papertext_auth.__main__:Scripts.fix"
lint = "papertext_auth.__main__:Scripts.lint"

[tool.poetry.plugins."paperback.modules"]
docs = "papertext_docs:DocsImplemented"

[tool.poetry.dependencies]
python = "^3.8"
pyexling = { git = "git@gitlab.com:papertext/pyexling.git" }
py2neo = "^2020.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
flake8 = "^3.7"
flakehell = "^0.7.0"
flake8-fixme = "^1.1"
pep8-naming = "^0.11.1"
black = "19.10b0"
isort = "^5.3"
mypy = "^0.782"
rope = "^0.18.0"

[tool.flakehell]
exclude = ["__pycahce__"]
format = "grouped"
show_source = true
max_line_length = 79

[tool.flakehell.plugins]
"flake8-fixme" = ["+*"]
"pep8-naming" = ["+*"]
"mccabe" = ["+*"]
"pycodestyle" = ["+*"]
"pyflakes" = ["+*"]
"pylint" = ["+*"]

[tool.black]
target-version = ['py38']
line_length = 79

[tool.isort]
profile="black"
force_alphabetical_sort_within_sections=true
skip_gitignore=true
color_output=true

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
plugins = "pydantic.mypy"
